moved project info below thumbnail; moved project description from hover effect on thumbnail to project info container; added project tags; redesigned project links

--- a/index.html
+++ b/index.html
@@ -211,86 +211,97 @@
 
                 <div class=project categories="website css js">
 
-                    <div class=top>
+                    <figure>
+                        <div class=img style="background-image: url(img/project-time-visualizer.png)"></div>
+                    </figure>
+
+                    <div class=project-info>
                         <h3>
                             <span lang=en>Time Visualizer</span>
                             <span lang=de>Zeit Visualisierer</span>
                         </h3>
+                        <p class=desc>
+                            <span lang=en>Web app for visualizing data over time</span>
+                            <span lang=de>Web App um Daten über Zeit zu visualisieren</span>
+                        </p>
+                        <ul class=tags>
+                            <li>Website</li>
+                            <li>CSS/Sass</li>
+                            <li>JavaScript</li>
+                        </ul>
                         <div class=links>
-                            <a href="https://github.com/christiandunkel/time-visualizer" title="GitHub Repository" target="_blank" rel="noopener noreferrer"></a>
-                            <a href="https://christiandunkel.github.io/time-visualizer" title="Visit the website" title-de="Besuche die Webseite" target="_blank" rel="noopener noreferrer"></a>
+                            <a href="https://christiandunkel.github.io/time-visualizer" target="_blank" rel="noopener noreferrer">Website</a>
+                            <a href="https://github.com/christiandunkel/time-visualizer" target="_blank" rel="noopener noreferrer" class=github>GitHub</a>
                         </div>
                     </div>
-
-                    <figure>
-                        <div class=img style="background-image: url(img/project-time-visualizer.png)"></div>
-                        <button class=project-show-info-btn title="Show more information"></button>
-                        <figcaption>
-                            <span lang=en><b>Time Visualizer</b> is a simple web tool for visualizing data over time.</span>
-                            <span lang=de>Der <b>Zeit Visualisierer</b> ist ein simples Web-Tool für das Visualisieren von Daten über Zeit.</span>
-                        </figcaption>
-                    </figure>
 
                 </div>
 
                 <div class=project categories="lib css">
 
-                    <div class=top>
-                        <h3>Sass Power Prefixer</h3>
-                        <div class=links>
-                            <a href="https://github.com/christiandunkel/power-prefixer.scss" title="GitHub Repository" target="_blank" rel="noopener noreferrer"></a>
-                        </div>
-                    </div>
-
                     <figure>
                         <div class=img style="background-image: url(img/project-power-prefixer.png)"></div>
-                        <button class=project-show-info-btn title="Show more information"></button>
-                        <figcaption>
-                            <span lang=en>The <b>Power Prefixer</b> is a Sass/SCSS library for automatically prefixing CSS properties.</span>
-                            <span lang=de>Der <b>Power Prefixer</b> ist eine Sass/SCSS Bibliothek zum automatischen Hinzufügen von CSS Prefixen.</span>
-                        </figcaption>
                     </figure>
+
+                    <div class=project-info>
+                        <h3>Sass Power Prefixer</h3>
+                        <p class=desc>
+                            <span lang=en>Sass library for automatically prefixing CSS properties</span>
+                            <span lang=de>Sass Bibliothek zum automatischen Hinzufügen von CSS Prefixen</span>
+                        </p>
+                        <ul class=tags>
+                            <li>Library</li>
+                            <li>CSS/Sass</li>
+                        </ul>
+                        <div class=links>
+                            <a href="https://github.com/christiandunkel/power-prefixer.scss" target="_blank" rel="noopener noreferrer" class=github>GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
 
                 <div class=project categories="csharp">
 
-                    <div class=top>
-                        <h3>tensquared</h3>
-                        <div class=links>
-                            <a href="https://github.com/christiandunkel/tensquared" title="GitHub Repository" target="_blank" rel="noopener noreferrer"></a>
-                            <a href="https://github.com/christiandunkel/tensquared/releases" title="Download the game" title-de="Lade das Spiel herunter" target="_blank" rel="noopener noreferrer"></a>
-                        </div>
-                    </div>
-
                     <figure>
                         <div class=img style="background-image: url(img/project-tensquared.jpg)"></div>
-                        <button class=project-show-info-btn title="Show more information"></button>
-                        <figcaption>
-                            <span lang=en><b>tensquared</b> is a 2D puzzle platform game made in Unity.</span>
-                            <span lang=de><b>tensquared</b> ist ein 2D Puzzle Platformer Spiel erstellt in Unity.</span>
-                        </figcaption>
                     </figure>
+
+                    <div class=project-info>
+                        <h3>tensquared</h3>
+                        <p class=desc>
+                            <span lang=en>2D puzzle platform game made in Unity</span>
+                            <span lang=de>2D Puzzle Platformer Spiel erstellt in Unity</span>
+                        </p>
+                        <ul class=tags>
+                            <li>C#</li>
+                        </ul>
+                        <div class=links>
+                            <a href="https://github.com/christiandunkel/tensquared/releases" target="_blank" rel="noopener noreferrer">Download</a>
+                            <a href="https://github.com/christiandunkel/tensquared" target="_blank" rel="noopener noreferrer" class=github>GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
 
                 <div class=project categories="cpp">
 
-                    <div class=top>
-                        <h3>Raytracer</h3>
-                        <div class=links>
-                            <a href="https://github.com/christiandunkel/raytracer" title="GitHub Repository" target="_blank" rel="noopener noreferrer"></a>
-                        </div>
-                    </div>
-
                     <figure>
                         <div class=img style="background-image: url(img/project-raytracer.png)"></div>
-                        <button class=project-show-info-btn title="Show more information"></button>
-                        <figcaption>
-                            <span lang=en>This C++ <b>Raytracer</b> supports rendering of simple shapes with shading, reflection, transparency &amp; more.</span>
-                            <span lang=de>Dieser C++ <b>Raytracer</b> unterstützt das Rendern simpler Objekte mit Schatten, Reflektion, Transparenz &amp; mehr.</span>
-                        </figcaption>
                     </figure>
+
+                    <div class=project-info>
+                        <h3>Raytracer</h3>
+                        <p class=desc>
+                            <span lang=en>C++ Raytracer for rendering of simple shapes with shading, reflection, transparency &amp; more</span>
+                            <span lang=de>C++ Raytracer für das Rendern simpler Objekte mit Schatten, Reflektion, Transparenz &amp; mehr</span>
+                        </p>
+                        <ul class=tags>
+                            <li>C++</li>
+                        </ul>
+                        <div class=links>
+                            <a href="https://github.com/christiandunkel/raytracer" target="_blank" rel="noopener noreferrer" class=github>GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
             
