--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class=project categories="website css js node php">
 
                     <figure>
-                        <div class=img style="background-image: url(img/project-mcjustawesome.png)"></div>
+                        <div class=img style="background-image: url(img/project-mcjustawesome.jpg)"></div>
                     </figure>
 
                     <div class=project-info>
