updated mobile logo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     <nav id=nav>
         <div class=bar>
             
-            <a class=mobile-logo href="#html" title="Go to top" title-de="Nach oben"><i></i></a>
+            <a class=mobile-logo href="#html" title="Go to top" title-de="Nach oben">
+                <span>Christian</span>
+                <span>Dunkel</span>
+            </a>
 
             <div id=mobile-menu>
                 <div class=overlay></div>
