--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 // shorten code if needed e.g. "en_US" -> "en"
                 code = code.substring(0,2);
                 
-                // if a different language than "en" is detected in any of the properties
-                // and it's supported, load it
+                // if a different language than "en" is detected in 
+                // any of the properties and it's supported, load it
                 if (code == 'de') {
                     html.setAttribute('lang', code);
                     break;
