made project images clickable

--- a/index.html
+++ b/index.html
@@ -269,9 +269,10 @@
 
                 <div class=project categories="website css js node php">
 
-                    <figure>
+                    
+                    <a href="https://bit.ly/2OtAXGd" target="_blank" rel="noopener noreferrer"><figure>
                         <div class=img style="background-image: url(img/project-mcjustawesome.png)"></div>
-                    </figure>
+                    </figure></a>
 
                     <div class=project-info>
                         <h3><span>I</span><span>J<span>A</span>M</span>i<span>ne<span>cr<span>a</span></span>f</span>t</h3>
@@ -301,9 +302,9 @@
 
                 <div class=project categories="website css js">
 
-                    <figure>
+                    <a href="https://christiandunkel.github.io/time-visualizer" target="_blank" rel="noopener noreferrer"><figure>
                         <div class=img style="background-image: url(img/project-time-visualizer.png)"></div>
-                    </figure>
+                    </figure></a>
 
                     <div class=project-info>
                         <h3>
@@ -335,9 +336,9 @@
 
                 <div class=project categories="lib css">
 
-                    <figure>
+                    <a href="https://github.com/christiandunkel/power-prefixer.scss" target="_blank" rel="noopener noreferrer"><figure>
                         <div class=img style="background-image: url(img/project-power-prefixer.png)"></div>
-                    </figure>
+                    </figure></a>
 
                     <div class=project-info>
                         <h3>Sass Power Prefixer</h3>
@@ -361,9 +362,9 @@
 
                 <div class=project categories="csharp">
 
-                    <figure>
+                    <a href="https://github.com/christiandunkel/tensquared" target="_blank" rel="noopener noreferrer"><figure>
                         <div class=img style="background-image: url(img/project-tensquared.jpg)"></div>
-                    </figure>
+                    </figure></a>
 
                     <div class=project-info>
                         <h3>tensquared</h3>
@@ -387,9 +388,9 @@
 
                 <div class=project categories="cpp">
 
-                    <figure>
+                    <a href="https://github.com/christiandunkel/raytracer" target="_blank" rel="noopener noreferrer"><figure>
                         <div class=img style="background-image: url(img/project-raytracer.png)"></div>
-                    </figure>
+                    </figure></a>
 
                     <div class=project-info>
                         <h3>Raytracer</h3>
