--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
                 <input class=checkbox type=checkbox />
                 
                 <div class="mail-btn responsive">
-                    <span lang=en>Get in touch &rarr;</span>
-                    <span lang=de>Kontaktiere mich &rarr;</span>
+                    <span lang=en>Get my e-mail &rarr;</span>
+                    <span lang=de>Sieh meine E-Mail &rarr;</span>
                 </div>
             
                 <a class="mail responsive" href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&colon;&#x63;&#x68;&#x72;&#x69;&#x73;&#x74;&#x69;&#x61;&#x6e;&#x64;&#x75;&#x6e;&#x6b;&#x65;&#x6c;&commat;&#x70;&#x72;&#x6f;&#x74;&#x6f;&#x6e;&#x6d;&#x61;&#x69;&#x6c;&period;&#x63;&#x6f;&#x6d;">&#x63;&#x68;&#x72;&#x69;&#x73;&#x74;&#x69;&#x61;&#x6e;&#x64;&#x75;&#x6e;&#x6b;&#x65;&#x6c;&commat;&#x70;&#x72;&#x6f;&#x74;&#x6f;&#x6e;&#x6d;&#x61;&#x69;&#x6c;&period;&#x63;&#x6f;&#x6d;</a>
