removed linear gradient and redesigned animated background

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class=center>
                         <div class=greet>
                             <span lang=en>Hi, I'm</span>
-                            <span lang=de>Ich bin</span>
+                            <span lang=de>Hi, ich bin</span>
                         </div><br />
                         <h1 class=name><span>Christian</span>,</h1><br />
                         <div class=desc>
@@ -492,8 +492,8 @@
         </button>
 
         <p class="responsive small">
-            <span lang=en>This website is hosted <a href="https://github.com/christiandunkel/christiandunkel.github.io" target="_blank" rel="noopener noreferrer">here</a> on GitHub.</span>
-            <span lang=de>Diese Webseite wird auf <a href="https://github.com/christiandunkel/christiandunkel.github.io" target="_blank" rel="noopener noreferrer">GitHub</a> gehostet.</span>
+            <span lang=en>The source code is hosted <a href="https://github.com/christiandunkel/christiandunkel.github.io" target="_blank" rel="noopener noreferrer">here</a> on GitHub.</span>
+            <span lang=de>Der Quellcode wird auf <a href="https://github.com/christiandunkel/christiandunkel.github.io" target="_blank" rel="noopener noreferrer">GitHub</a> gehostet.</span>
         </p>
 
         <p class="responsive small"> 
