--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                     <div class=project-info>
                         <h3><span>I</span><span>J<span>A</span>M</span>i<span>ne<span>cr<span>a</span></span>f</span>t</h3>
                         <p class=desc>
-                            <span lang=en>Website for Minecraft commands, functions and tutorials</span>
-                            <span lang=de>Webseite für Minecraft Befehle, Funktionen and Tutorials</span>
+                            <span lang=en>Website for Minecraft commands, data packs and tutorials</span>
+                            <span lang=de>Webseite für Minecraft Befehle, Datenpakete und Tutorials</span>
                         </p>
                         <ul class=tags>
                             <li>
