--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             
             <p class="responsive">
                 <span lang=en>I started out editing videos and images, before I discovered the wonders of <b class=blue>web development</b>!</span>
-                <span lang=de>Ich begann mit dem Bearbeiten von Videos und Bildern, bevor ich die Wunder der <b class=blue>Web-Entwicklung</b> entdeckt habe!</span>
+                <span lang=de>Ich begann mit dem Bearbeiten von Videos und Bildern, bevor ich die <b class=blue>Web-Entwicklung</b> für mich entdeckt habe!</span>
             </p>
             
             <p class="responsive">
