--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                     
                     <a href="https://bit.ly/2OtAXGd" target="_blank" rel="noopener noreferrer"><figure>
-                        <div class=img style="background-image: url(img/project-mcjustawesome.png)"></div>
+                        <div class=img style="background-image: url(img/project-mcjustawesome.jpg)"></div>
                     </figure></a>
 
                     <div class=project-info>
