added new project

--- a/index.html
+++ b/index.html
@@ -275,6 +275,34 @@
             
             <div id=projects-container>
 
+                <div class=project categories="lib node js">
+
+                    <a href="https://github.com/webis-de/lecture.js" target="_blank" rel="noopener noreferrer"><figure>
+                        <div class=img style="background-image: url(img/project-lecture-js.jpg)"></div>
+                    </figure></a>
+
+                    <div class=project-info>
+                        <h3>Lecture.js</h3>
+                        <p class=desc>
+                            <span lang=en>Lecture.js is a software that converts a script and slides to a spoken video presentation using advanced text-to-speech services. In the process of development, I created the custom markup language LSML for defining presentations visually and audibly in text-form.</span>
+                            <span lang=de>Software und neue Auszeichnungssprache zur Konvertierung eines Skripts und Folien zu einer gesprochene Videopräsentation mittels fortgeschrittener Text-zu-Sprache-Dienste</span>
+                        </p>
+                        <ul class=tags>
+                            <li>
+                                <span lang=en>Library</span>
+                                <span lang=de>Bibliothek</span>
+                            </li>
+                            <li>JavaScript</li>
+                            <li>XML</li>
+                            <li>SSML</li>
+                        </ul>
+                        <div class=links>
+                            <a href="https://github.com/webis-de/lecture.js" target="_blank" rel="noopener noreferrer" class=github>GitHub</a>
+                        </div>
+                    </div>
+
+                </div>
+
                 <div class=project categories="website css js">
 
                     <a href="https://christiandunkel.github.io/time-visualizer" target="_blank" rel="noopener noreferrer"><figure>
