current year is now automatically set

--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
         </p>
 
         <p class="responsive small"> 
-            <span lang="en">&copy; Copyright 2020, Christian Dunkel</span>
-            <span lang="de">&copy; Urheberrecht 2020, Christian Dunkel</span>
+            <span lang="en">&copy; Copyright <span class="current-year"></span>, Christian Dunkel</span>
+            <span lang="de">&copy; Urheberrecht <span class="current-year"></span>, Christian Dunkel</span>
         </p>
 
     </footer>
