hide contact section

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 							<span lang="en">Projects</span>
 							<span lang="de">Projekte</span>
 						</a>
-						<a class="a3" href="#contact">
+						<!--<a class="a3" href="#contact">
 							<span lang="en">Contact</span>
 							<span lang="de">Kontakt</span>
-						</a>
+						</a>-->
 						<div class="hover-bg"></div>
 						<button id="language-btn" title="Change language" data-title-de="Sprache wechseln">
 							<b>
@@ -236,7 +236,7 @@
 
 
 
-		<section id="contact" class="content-section">
+		<!--<section id="contact" class="content-section">
 
 			<h2 class="responsive">
 				<span lang="en">Contact</span>
@@ -270,7 +270,7 @@
 
 			<a class="responsive socialmedia github" href="https://github.com/christiandunkel" target="_blank" rel="noopener noreferrer">GitHub</a>
 
-		</section>
+		</section>-->
 
 	</main>
 
